--- a/resources/main.css
+++ b/resources/main.css
@@ -51,14 +51,14 @@ body, html{
     padding-top: 13px;
 }
 
-nav {
+.menu-desktop {
     display: flex;
     color:white;
     justify-content: flex-end;
     padding: 25px 0px;
 }
 
-nav a{
+.menu-desktop a{
     text-transform: uppercase;
     font-size: 20px;
     padding-right: 10px;
@@ -66,7 +66,7 @@ nav a{
     width: 12%;
 }
 
-nav a:last-of-type{
+.menu-desktop a:last-of-type{
     padding-right: 35px;
 }
 
@@ -74,12 +74,13 @@ nav a:last-of-type{
     display: none;
     color: white;
     padding: 10px;
-    padding-right: 0px;
+    padding-right: 15px;
     float: right;
 }
 
 .menu-mobile i {
     font-size: 40px;
+    cursor: pointer;
 }
 
 .title{
@@ -264,6 +265,90 @@ input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
 
 .submit-container i{
     padding-top: 14px;
+}
+
+/* for JS part */
+
+.mobile-wrapper{
+    position: relative;
+    width: 100%;
+    z-index: 2;
+}
+
+.mobile-inner-wrapper{
+    background-color: #2b2b2b;
+    padding-top: 20px;
+    color: white;
+    position: fixed;
+    bottom: 0;
+    top: 0;
+    left: 0;
+    right: 0;
+}
+
+.header-mobile div:first-of-type{
+    font-size: 25px;
+}
+
+.header-mobile a:first-of-type{
+    font-size: 40px;
+    padding-right: 15px;
+    color:  #c09c78;
+    cursor: pointer;
+}
+
+.header-mobile{
+    display: flex;
+    justify-content: space-between;
+    padding:0px 0px 30px 15px;
+}
+
+.menu-mobile-open{
+    display: flex;
+    flex-direction: column;
+    padding-left: 15px;
+}
+
+.menu-mobile-open a{
+    font-size: 40px;
+    letter-spacing: 5px;
+    font-weight: 200;
+    padding-top: 10px;
+}
+
+.menu-mobile-open a:hover{
+    font-weight: 400;
+    cursor:pointer;
+}
+
+.bottom-icons{
+    display: flex;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+.bottom-icons div{
+   width: 50%;
+   border: lightgray;
+   text-align: center;
+   border-top: solid 1px lightgray;
+   padding: 20px;
+}
+
+.bottom-icons div:first-of-type{
+    border-right: solid 1px lightgray;
+}
+
+.bottom-icons a{
+    font-size: 30px;
+    color: lightgray;
+}
+
+
+.hidden {
+    display: none;
 }
 
 @media (max-width: 600px) {
