--- a/resources/main.css
+++ b/resources/main.css
@@ -11,6 +11,7 @@ body, html{
 .wrapper{
     height: 100%;
     font-family: 'Fira Sans Extra Condensed', sans-serif;
+    position: relative;
 }
 
 .header-image-wrapper{
@@ -268,13 +269,6 @@ input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
 }
 
 /* for JS part */
-/* nu era mai ok sa pozitionam wrapper-ul extern? */
-.mobile-wrapper{
-    position: relative;
-    width: 100%;
-    z-index: 2;
-}
-
 .mobile-inner-wrapper{
     background-color: #2b2b2b;
     padding-top: 20px;
@@ -284,6 +278,7 @@ input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
     top: 0;
     left: 0;
     right: 0;
+    z-index: 2;
 }
 
 .header-mobile div:first-of-type{
@@ -343,9 +338,8 @@ input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
 
 .bottom-icons a{
     font-size: 30px;
-    color: lightgray;
+    color: darkgray;
 }
-
 
 .hidden {
     display: none;
