--- a/resources/main.css
+++ b/resources/main.css
@@ -65,6 +65,7 @@ body, html{
     padding-right: 10px;
     font-weight: 300;
     width: 12%;
+    cursor: pointer;
 }
 
 .menu-desktop a:last-of-type{
