--- a/resources/main.css
+++ b/resources/main.css
@@ -1,4 +1,17 @@
-* {
+body{
+    font-family: 'Fira Sans Extra Condensed', sans-serif;
+    background-color: #2b2b2b;
+}
+
+.jumbotron-image-header{
+    background-image: url(../assets/bg-header.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 380px;
+}
+
+/* * {
     box-sizing: border-box;
   }
 
@@ -235,13 +248,13 @@ body, html{
     padding: 20px;
 }
 
-input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+input::-webkit-input-placeholder { 
     color:white;
     padding-left: 20px;
     font-weight: 500;
   }
 
-  textarea::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  textarea::-webkit-input-placeholder { 
     color:white;
     font-weight: 500;
   }
@@ -267,10 +280,10 @@ input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
 
 .submit-container i{
     padding-top: 14px;
-}
+} */
 
 /* for JS part */
-.mobile-inner-wrapper{
+/* .mobile-inner-wrapper{
     background-color: #2b2b2b;
     padding-top: 20px;
     color: white;
@@ -454,4 +467,4 @@ input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
         padding-top: 10px;
         font-size: 13px;
     }
-}
+} */
