--- a/resources/main.css
+++ b/resources/main.css
@@ -1,6 +1,7 @@
 body{
     font-family: 'Fira Sans Extra Condensed', sans-serif;
     background-color: #2b2b2b;
+    color: white;
 }
 
 .jumbotron-image-header{
@@ -11,15 +12,56 @@ body{
     height: 380px;
 }
 
-/* * {
-    box-sizing: border-box;
-  }
-
-body, html{
-    margin: 0;
-    padding: 0;
-    height: 100%;
+.nav-link{
+    color:white !important;
+    font-size: 20px;
 }
+
+.photo-wrapper.one{
+    background-image: url(../assets/concert-hall.jpg);
+}
+
+.photo-wrapper.two{
+    background-image: url(../assets/bedroom-2.jpg);
+}
+
+.photo-wrapper.three{
+    background-image: url(../assets/hotel.jpg);
+}
+
+.photo-wrapper.four{
+    background-image: url(../assets/bedroom-1.jpg);
+}
+
+.photo-wrapper.five{
+    background-image: url(../assets/library.jpg);
+}
+
+.photo-wrapper.six{
+    background-image: url(../assets/kitchen.jpg);
+}
+
+.photo-wrapper{
+    height: 500px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    position: relative;
+    z-index: -1;
+}
+
+.opacity-layer{
+    background-color: black;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.5;
+    z-index: -1;
+}
+
+/* *
 
 .wrapper{
     height: 100%;
@@ -27,25 +69,7 @@ body, html{
     position: relative;
 }
 
-.header-image-wrapper{
-    background-image: url(../assets/bg-header.jpg);
-    height: 380px;
-    width: 100%;
-    filter: brightness(80%);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-}
 
-.title-square-wrapper{
-    padding: 20px 0px 10px 35px;
-    background-color: #2b2b2b;
-    height: 250px;
-    width: 200px;
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-}
 
 .title-square-wrapper div:first-child{
     padding-left: 15px;
@@ -53,11 +77,6 @@ body, html{
     font-size: 40px;
 }
 
-.line{
-    border-left: 4px solid darkgray;
-    height: 45px;
-    margin: 12px 7px;
-}
 
 .title-square-wrapper i{
     color: darkgray;
@@ -120,50 +139,8 @@ body, html{
     flex-wrap: wrap;
 }
 
-.photo-wrapper.one{
-    background-image: url(../assets/concert-hall.jpg);
-}
 
-.photo-wrapper.two{
-    background-image: url(../assets/bedroom-2.jpg);
-}
 
-.photo-wrapper.three{
-    background-image: url(../assets/hotel.jpg);
-}
-
-.photo-wrapper.four{
-    background-image: url(../assets/bedroom-1.jpg);
-}
-
-.photo-wrapper.five{
-    background-image: url(../assets/library.jpg);
-}
-
-.photo-wrapper.six{
-    background-image: url(../assets/kitchen.jpg);
-}
-
-.photo-wrapper{
-    width: 33.33%;
-    height: 500px;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    position: relative;
-    z-index: -1;
-}
-
-.opacity-layer{
-    background-color: black;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    opacity: 0.5;
-    z-index: -1;
-}
 
 .image-text{
     text-transform: uppercase;
@@ -359,112 +336,4 @@ input::-webkit-input-placeholder {
     display: none;
 }
 
-@media (max-width: 600px) {
-
-    .menu-mobile {
-        display: block;
-    }
-
-    .menu-desktop {
-        display: none;
-    }
-
-    .title{
-        width: 100%;
-        height: 85%;
-        justify-content: center;
-    }
-
-    .title h1{
-        font-size: 60px;
-        align-self: flex-end;
-    }
-
-    .title-square-wrapper{
-        padding-left: 20px;
-        height: 220px;
-        width: 165px;
-    }
-
-    .gallery-wrapper{
-        flex-direction: column;
-    }
-
-    .photo-wrapper{
-        width: 100%;
-        height: 380px;
-        display: grid;
-    }
-
-    .image-text{
-        margin: auto;
-        font-weight: 300;
-        line-height: 1.5;
-    }
-
-    .side-text{
-        position: relative;
-        transform: none;
-        text-align: center;
-        width: 100%;
-        font-size: 23px;
-    }
-
-    .photo-title{
-       display: flex;
-       justify-content: center;
-       font-size: 28px;
-    }
-
-    .photo-title div:last-of-type{
-        color:  #c09c78 ;
-        padding-left: 5px;
-    }
-
-    .form-container button{
-        display: none;
-    }
-
-    .form-container h1{
-        font-size: 40px;
-    }
-
-    .form-container{
-        padding-top: 10px;
-    }
-
-    .input-wrapper{
-       flex-wrap: nowrap;
-       align-items: center;
-       height: fit-content;
-    }
-
-    .input-wrapper > *{
-        flex: none;
-    }
-
-    form{
-        width: 80%;
-        margin: 0 auto;
-    }
-
-    .input-wrapper input{
-        width: 100%;
-    }
-
-    .input-wrapper textarea{
-        width: 100%;
-        height: 100px;
-    }
-
-    .submit-container{
-        float: right;
-        width: 130px;
-        height: 35px;
-    }
-
-    .submit-container i {
-        padding-top: 10px;
-        font-size: 13px;
-    }
-} */
+ */
